ignore IDE or editor files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,22 @@ venv
 
 # test files (not testing)
 **/test.*
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
